feat: 更新模块和数据库结构，新增小程序管理功能，优化用户申请列表和密保问题处理逻辑，更新相关API接口
